feat(api.js): editar evento

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,9 @@ code {
     height: 100%;
 }
 
+.container-section{
+    margin-bottom: 150px;
+}
 
 @media (max-width: 655px) {
     .custom-navbar {
